# ssl-vehicle-tracking

./: .gitignore  CHANGELOG  CONTRIBUTING.md  LICENSE  README.md
src/ssl_vehicle_tracking/: CMakeLists.txt  package.xml
src/ssl_vehicle_tracking/launch/: cpm_lab.launch.py
src/ssl_vehicle_tracking_msgs/: CMakeLists.txt  package.xml
src/ssl_vehicle_tracking_msgs/msg/: Object.msg  ObjectStamped.msg  Track.msg  TrackStamped.msg  TrackState.msg  Wheel.msg  WheelArray.msg  WheelStamped.msg
src/ssl_vehicle_tracking_vehicle_detection/: package.xml  setup.cfg  setup.py
src/ssl_vehicle_tracking_vehicle_detection/ssl_vehicle_tracking_vehicle_detection/: common_util.py  knowledge_base.py  vehicle.py  vehicle_detection.py  vehicle_detection_node.py  vehicle_evaluation.py  vehicle_tracking.py  wheel_evaluation.py
src/ssl_vehicle_tracking_visualization/: CMakeLists.txt  package.xml  plugins_description.xml
src/ssl_vehicle_tracking_visualization/include/ssl_vehicle_tracking_visualization/: AngleProperty.hpp  IconProperty.hpp  LineObject.hpp  OnlineProperty.hpp  Shape.hpp  Visual.hpp  visibility_control.hpp
src/ssl_vehicle_tracking_visualization/include/ssl_vehicle_tracking_visualization/displays/object/: ObjectDisplay.hpp  ObjectSelectionHandler.hpp  ObjectVisual.hpp
src/ssl_vehicle_tracking_visualization/include/ssl_vehicle_tracking_visualization/displays/track/: TrackDisplay.hpp  TrackSelectionHandler.hpp  TrackVisual.hpp
src/ssl_vehicle_tracking_visualization/include/ssl_vehicle_tracking_visualization/displays/wheel/: WheelDisplay.hpp  WheelSelectionHandler.hpp  WheelVisual.hpp
src/ssl_vehicle_tracking_visualization/ogre_media/: test.material
src/ssl_vehicle_tracking_visualization/src/: AngleProperty.cpp  IconProperty.cpp  LineObject.cpp  OnlineProperty.cpp  Shape.cpp  Visual.cpp
src/ssl_vehicle_tracking_visualization/src/displays/object/: ObjectDisplay.cpp  ObjectSelectionHandler.cpp  ObjectVisual.cpp
src/ssl_vehicle_tracking_visualization/src/displays/track/: TrackDisplay.cpp  TrackSelectionHandler.cpp  TrackVisual.cpp
src/ssl_vehicle_tracking_visualization/src/displays/wheel/: WheelDisplay.cpp  WheelSelectionHandler.cpp  WheelVisual.cpp
src/ssl_vehicle_tracking_wheel_detection/: package.xml  setup.cfg  setup.py
src/ssl_vehicle_tracking_wheel_detection/ssl_vehicle_tracking_wheel_detection/: wheel_detection_node.py
src/ssl_vehicle_tracking_wheel_tracking/: package.xml  setup.cfg  setup.py
src/ssl_vehicle_tracking_wheel_tracking/ssl_vehicle_tracking_wheel_tracking/: online_detection_reader.py  wheel_tracker.py  wheel_tracking_node.py
