<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ssl_vehicle_tracking</name>
  <version>0.1.0</version>
  <description>Contains launch files for the wheel and vehicle tracking.</description>
  <maintainer email="schaefer@embedded.rwth-aachen.de">Simon Schäfer</maintainer>
  <license>MIT</license>

  <depend>ssl_vehicle_tracking_wheel_tracking</depend>
  <depend>ssl_vehicle_tracking_wheel_detection</depend>
  <depend>ssl_vehicle_tracking_vehicle_detection</depend>
  <depend>ssl_vehicle_tracking_msgs</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
