<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ssl_vehicle_tracking_visualization</name>
  <version>0.1.0</version>
  <description>Provides RViz integration for the ssl vehicle tracking packages.</description>
  <maintainer email="schaefer@embedded.rwth-aachen.de">Simon Schäfer</maintainer>
  <author email="schaefer@embedded.rwth-aachen.de">Simon Schäfer</author>

  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>rviz2</depend>
  <depend>ssl_vehicle_tracking_msgs</depend>
  <depend>tf2</depend>
  <depend>pluginlib</depend>

  <build_depend>qtbase5-dev</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
