<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ssl_vehicle_tracking_wheel_detection</name>
    <version>0.1.0</version>
    <description>Wheel detection based on pressure data.</description>
    <author email="hendrik.steidl@rwth-aachen.de">Hendrik Steidl</author>
    <maintainer email="schaefer@embedded.rwth-aachen.de">Simon Schäfer</maintainer>
    <license>MIT</license>

    <depend>ssl_vehicle_tracking_msgs</depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>python3-scipy</exec_depend>
    <exec_depend>python3-skimage</exec_depend>
    <exec_depend>python3-numpy</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
